--- a/velox/dwio/parquet/CMakeLists.txt
+++ b/velox/dwio/parquet/CMakeLists.txt
@@ -14,6 +14,6 @@
 
 add_subdirectory(reader)
 
-if(${VELOX_BUILD_TESTING})
+#if(${VELOX_BUILD_TESTING})
   add_subdirectory(tests)
-endif()
+#endif()
