--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ endif()
 if(${VELOX_BUILD_TESTING})
   # Enable all components to build testing binaries
   set(VELOX_ENABLE_PRESTO_FUNCTIONS ON)
-  set(VELOX_ENABLE_DUCKDB ON)
+  set(VELOX_ENABLE_DUCKDB OFF)
   set(VELOX_ENABLE_EXPRESSION ON)
   set(VELOX_ENABLE_PARSE ON)
   set(VELOX_ENABLE_EXEC ON)
@@ -81,10 +81,12 @@ endif()
 
 if(${VELOX_BUILD_BENCHMARKS})
   set(VELOX_ENABLE_BENCHMARKS ON)
-  set(VELOX_ENABLE_DUCKDB ON)
+  set(VELOX_ENABLE_DUCKDB OFF)
   set(VELOX_ENABLE_PARSE ON)
   set(VELOX_BUILD_TEST_UTILS ON)
 endif()
+
+message(VELOX_ENABLE_DUCKDB  ${VELOX_ENABLE_DUCKDB})
 
 if(VELOX_ENABLE_S3)
   # Set AWS_ROOT_DIR if you have a custom install location of AWS SDK CPP.
@@ -265,12 +267,12 @@ else()
   set(FILESYSTEM "")
 endif()
 
-if(VELOX_BUILD_TESTING AND NOT VELOX_ENABLE_DUCKDB)
-  message(
-    FATAL_ERROR
-      "Unit tests require duckDB to be enabled (VELOX_ENABLE_DUCKDB=ON or VELOX_BUILD_TESTING=OFF)"
-  )
-endif()
+#if(VELOX_BUILD_TESTING AND NOT VELOX_ENABLE_DUCKDB)
+#  message(
+#    FATAL_ERROR
+#      "Unit tests require duckDB to be enabled (VELOX_ENABLE_DUCKDB=ON or VELOX_BUILD_TESTING=OFF)"
+#  )
+#endif()
 
 include_directories(SYSTEM velox)
 include_directories(SYSTEM velox/external)
