--- a/velox/duckdb/conversion/CMakeLists.txt
+++ b/velox/duckdb/conversion/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(velox_duckdb_parser DuckParser.cpp)
 target_link_libraries(velox_duckdb_parser velox_duckdb_conversion duckdb
                       velox_parse_expression)
 
+message("${VELOX_BUILD_TESTING}")
 if(${VELOX_BUILD_TESTING})
   add_subdirectory(tests)
 endif()
