--- a/velox/dwio/dwrf/reader/CMakeLists.txt
+++ b/velox/dwio/dwrf/reader/CMakeLists.txt
@@ -24,7 +24,7 @@ add_library(
   SelectiveColumnReader.cpp
   StripeDictionaryCache.cpp
   StripeReaderBase.cpp
-  StripeStream.cpp)
+  StripeStream.cpp ../../common/ColumnVisitor.h)
 
 target_link_libraries(
   velox_dwio_dwrf_reader velox_dwio_common velox_dwio_dwrf_common velox_caching
