--- a/velox/dwio/parquet/CMakeLists.txt
+++ b/velox/dwio/parquet/CMakeLists.txt
@@ -12,6 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+
+SET (THRIFT_LIB_DIR "/usr/local/lib")
+find_library(THRIFTLIB thrift PATHS ${THRIFT_LIB_DIR})
+MESSAGE("Found Thrift lib: ${THRIFTLIB} at ${THRIFT_LIB_DIR}")
+
 add_subdirectory(reader)
 
 message(STATUS "VELOX_BUILD_TESTING: ${VELOX_BUILD_TESTING}")
