--- a/velox/dwio/parquet/reader/CMakeLists.txt
+++ b/velox/dwio/parquet/reader/CMakeLists.txt
@@ -12,10 +12,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(duckdb)
+get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
+foreach (dir ${dirs})
+    message(STATUS "dir='${dir}'")
+endforeach ()
 
-add_library(velox_dwio_parquet_reader ParquetReader.cpp)
+#add_subdirectory(duckdb)
+#add_library(velox_dwio_parquet_reader ParquetReader.cpp)
+#target_link_libraries(
+#  velox_dwio_parquet_reader velox_dwio_parquet_reader_duckdb ${THRIFTLIB} velox_dwio_common
+#  velox_duckdb_conversion duckdb velox_dwio_dwrf_proto ${FMT})
+#target_include_directories(velox_dwio_parquet_reader PUBLIC /usr/local/include/)
 
+add_library(velox_dwio_native_parquet_reader Decoder.cpp NativeParquetReader.cpp ParquetThriftTypes.cpp NativeParquetColumnReader.cpp)
 target_link_libraries(
-  velox_dwio_parquet_reader velox_dwio_parquet_reader_duckdb velox_dwio_common
-  velox_duckdb_conversion duckdb ${FMT})
+        velox_dwio_native_parquet_reader
+        velox_type
+        velox_dwio_common
+        velox_dwio_dwrf_common
+        velox_dwio_dwrf_proto
+        ${THRIFTLIB}
+        ${FMT})
+target_include_directories(velox_dwio_native_parquet_reader PUBLIC /usr/local/include/)
