--- a/velox/dwio/parquet/tests/CMakeLists.txt
+++ b/velox/dwio/parquet/tests/CMakeLists.txt
@@ -16,61 +16,85 @@
 include_directories(${CMAKE_BINARY_DIR})
 
 set(VELOX_LINK_LIBS
-    velox_dwio_common
-    velox_dwio_common_exception
-    velox_dwio_parquet_reader
-    velox_dwio_type_fbhive
-    velox_dwrf_test_utils
-    velox_vector
-    velox_vector_test_lib
-    velox_exception
-    velox_memory
-    velox_process
-    velox_serialization
-    velox_encode
-    velox_type
-    velox_caching
-    ${FOLLY_WITH_DEPENDENCIES}
-    ${FMT})
+        velox_dwio_common
+        velox_dwio_common_exception
+        velox_dwio_native_parquet_reader
+        velox_dwio_type_fbhive
+        velox_dwrf_test_utils
+        velox_exec
+        velox_hive_connector
+        velox_vector
+        velox_vector_test_lib
+        velox_exception
+        velox_memory
+        velox_process
+        velox_serialization
+        velox_encode
+        velox_type
+        velox_caching
+        ${FOLLY_WITH_DEPENDENCIES}
+        ${FMT})
 
 set(TEST_LINK_LIBS ${gflags_LIBRARIES} gtest gtest_main gmock ${GLOG}
                    ${FILESYSTEM})
 
-add_executable(velox_dwio_parquet_reader_test ParquetReaderTest.cpp)
+# Disable DuckDB reader test temporarily
+
+#add_executable(velox_dwio_parquet_reader_test ParquetReaderTest.cpp)
+#add_test(
+#  NAME velox_dwio_parquet_reader_test
+#  COMMAND velox_dwio_parquet_reader_test
+#  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+#
+#target_link_libraries(velox_dwio_parquet_reader_test ${VELOX_LINK_LIBS}
+#                      ${TEST_LINK_LIBS})
+#
+#add_executable(velox_dwio_parquet_table_scan_test ParquetTableScanTest.cpp)
+#add_test(
+#  NAME velox_dwio_parquet_table_scan_test
+#  COMMAND velox_dwio_parquet_table_scan_test
+#  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+#
+#target_link_libraries(
+#  velox_dwio_parquet_table_scan_test
+#  ${VELOX_LINK_LIBS}
+#  velox_exec_test_util
+#  velox_exec
+#  velox_hive_connector
+#  velox_aggregates
+#  ${TEST_LINK_LIBS})
+#
+#add_executable(velox_dwio_parquet_tpch_test ParquetTpchTest.cpp)
+#add_test(
+#  NAME velox_dwio_parquet_tpch_test
+#  COMMAND velox_dwio_parquet_tpch_test
+#  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+#
+#target_link_libraries(
+#  velox_dwio_parquet_tpch_test
+#  velox_exec_test_util
+#  velox_exec
+#  velox_hive_connector
+#  velox_aggregates
+#  ${VELOX_LINK_LIBS}
+#  ${TEST_LINK_LIBS})
+
+add_executable(velox_dwio_native_parquet_reader_test NativeParquetReaderTest.cpp ParquetReaderTest.h)
 add_test(
-  NAME velox_dwio_parquet_reader_test
-  COMMAND velox_dwio_parquet_reader_test
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+        NAME velox_dwio_native_parquet_reader_test
+        COMMAND velox_dwio_native_parquet_reader_test
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(velox_dwio_parquet_reader_test ${VELOX_LINK_LIBS}
-                      ${TEST_LINK_LIBS})
+target_link_libraries(velox_dwio_native_parquet_reader_test ${VELOX_LINK_LIBS}
+        ${TEST_LINK_LIBS})
 
-add_executable(velox_dwio_parquet_table_scan_test ParquetTableScanTest.cpp)
+add_executable(velox_dwio_native_parquet_reader_benchmark ParquetReaderBenchmark.cpp ParquetReaderTest.h)
 add_test(
-  NAME velox_dwio_parquet_table_scan_test
-  COMMAND velox_dwio_parquet_table_scan_test
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+        NAME velox_dwio_native_parquet_reader_benchmark
+        COMMAND velox_dwio_native_parquet_reader_benchmark
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(
-  velox_dwio_parquet_table_scan_test
-  ${VELOX_LINK_LIBS}
-  velox_exec_test_util
-  velox_exec
-  velox_hive_connector
-  velox_aggregates
-  ${TEST_LINK_LIBS})
-
-add_executable(velox_dwio_parquet_tpch_test ParquetTpchTest.cpp)
-add_test(
-  NAME velox_dwio_parquet_tpch_test
-  COMMAND velox_dwio_parquet_tpch_test
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-
-target_link_libraries(
-  velox_dwio_parquet_tpch_test
-  velox_exec_test_util
-  velox_exec
-  velox_hive_connector
-  velox_aggregates
-  ${VELOX_LINK_LIBS}
-  ${TEST_LINK_LIBS})
+message("TEST_LINK_LIBS ${TEST_LINK_LIBS}")
+message("FOLLY_WITH_DEPENDENCIES ${FOLLY_WITH_DEPENDENCIES}")
+target_link_libraries(velox_dwio_native_parquet_reader_benchmark ${VELOX_LINK_LIBS}
+        ${TEST_LINK_LIBS} ${FOLLY_WITH_DEPENDENCIES} ${FOLLY_BENCHMARK})
